# dockerr

./: .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker_utils.py  main.py  noxfile.py  pyproject.toml  requirements-dev.txt  runner.py  test_runner.py
.github/workflows/: publish.yml
integration_tests/: basic_python_server_test.py
integration_tests/basic_python_server/: Dockerfile
samples/: ubuntu_args_test.py  ubuntu_echo_test.py
samples/basic_python_server/: test.py
samples/ubuntu_args/: test.py
samples/ubuntu_echo/: test.py
src/dockerr/: runner.py
src/dockerr/utils/: container.py  docker.py
tests/: conftest.py  test_container.py  test_docker.py  test_runner.py
tests/utils/: test_container.py  test_docker.py
utils/: container.py  docker.py
