[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "versioningit", "wheel"]

[project]
name = "dockerr"
description = "A simple python package to manage external testing of docker containers"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
keywords = ["docker", "testing", "containers", "pytest"]
authors = [{ name = "Roy Moore", email = "roy@moore.co.il" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]
dependencies = ["docker==7.0.0"]

[project.optional-dependencies]
test = ["pytest", "httpx"]
dev = ["pre-commit", "black", "isort", "dockerr[test]"]

[project.urls]
homepage = "https://github.com/Tranquility2/dockerr"
repository = "https://github.com/Tranquility2/dockerr"

[tool.versioningit.vcs]
default-tag = "0.0.0"
match = ["v*"]
method = "git"

[tool.versioningit.tag2version]
rmprefix = "v"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "integration_tests",
]
