[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "versioningit",
    "wheel"
]

[project]
name = "dockerr"
description = "A simple python package to manage external testing of docker containers"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
keywords = [
    "docker",
    "testing",
    "containers",
    "pytest"
]
authors = [
    { name = "Roy Moore", email = "roy@moore.co.il" }
]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = [
    "version"
]
dependencies = [
    "docker==7.0.0"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "httpx",
]
dev = [
    "pre-commit",
    "black",
    "isort",
    "pylint",
    "mypy",
    "dockerr[test]"
]

[project.urls]
homepage = "https://github.com/Tranquility2/dockerr"
repository = "https://github.com/Tranquility2/dockerr"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests", "integration_tests"]
namespaces = true

[tool.versioningit.vcs]
default-tag = "0.0.0"
match = ["v*"]
method = "git"

[tool.versioningit.tag2version]
rmprefix = "v"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "samples",
]
addopts = [
    "--import-mode=importlib",
]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
multi_line_output = 3

[tool.pylint.main]
fail-under = 10.0
init-hook = 'import sys; sys.path.append(".")'

[tool.pylint.format]
max-line-length = 120

[tool.coverage.run]
omit = ["dockerr/tests/*", "dockerr/samples/*"]

[tool.coverage.report]
fail_under = 100

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
implicit_reexport = false
warn_unused_ignores = true
warn_redundant_casts = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
